# helloWorld

./: .gitignore  CMakeLists.txt
include/: CustomTimer.hpp  Entity.h  Log.h  Logger.h  Math.h  NumberUtils.hpp  Player.h  PlayerCopier.h  Random.hpp  ThreadTest.hpp  pch.hpp  print.h
include/template/: Log.hpp  Logger.hpp
src/: Entity.cpp  Log.cpp  Logger.cpp  Main.cpp  Math.cpp  NumberUtils.cpp  Player.cpp  PlayerCopier.cpp  ThreadTest.cpp  helloWorld.cpp  pch.cpp  print.cpp  tracing.cpp
src/main/: Main_1.cpp  Main_2.cpp
